Fix 2 minor by-version issues
jdk18/index.md: Added missing JEPs 418 (Internet-Address Resolution SPI) and 419 (FFM API 2nd Incubator)
index.md: Fixed JDK 8 EOL from "2017" to "2030 (paid)" in migration diagram

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>